fix: filter break style is not align correctly

--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -178,7 +178,6 @@ $data-table-pagination-dropdown-min-width: 6rem !default;
 }
 
 .pgn__data-table-filters-breakout-filter {
-  align-self: flex-end;
   margin-inline-end: map_get($spacers, 2);
 }
 
